Fix flattening of group layers with Inherit Alpha property set

If all the selected layers have the same composite op and channel
flags we should just merge them together using Normal composition
and write into a destination layer with their original composition
and channel flags.

BUG:390095